Revert "Grid - col-XX-auto - Fix an overflow issue"
This reverts commit 9565f8334eea04fac1fce62decc68c51a6f76fa8.

--- a/src/base/views/_screen.scss
+++ b/src/base/views/_screen.scss
@@ -87,6 +87,7 @@
 	min-height: 1px;
 	padding-left:  ($grid-gutter-width / 2);
 	padding-right: ($grid-gutter-width / 2);
+	position: relative;
 }
 
 .col-xs-auto {
